syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package logginStream;

// The greeting service definition.
service LoggingStream {
  // Sends a greeting
  rpc SendLog (LogRequest) returns (LogResponse) {}
}

// The request message containing the user's name.
message LogRequest {
  string logfile = 1;
  string filter = 2;
}

// The response message containing the greetings
message LogResponse {
  string type = 1;
  string createAt = 2;
  string content = 3;
  int32 status = 4;
}

// protoc --go_out=. loggingstream/loggingStream.proto 
// $ protoc -I loggingStream/ loggingStream/loggingStream.proto --go_out=plugins=grpc:helloworld
